buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'java'
    id 'idea'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    testImplementation {
        exclude group: 'junit', module: 'junit'
    }
}


ext {
    lombokVersion = "1.18.34"
    junitVersion = "5.10.0"
    mockitoVersion = "5.13.0"
    restAssuredVersion = "5.5.0"
}



description = "Java Learning and KB project "

compileJava {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    options.encoding = 'UTF-8' //to ensure that I always use UTF-8 in project
}

compileTestJava {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    options.encoding = 'UTF-8' //to ensure that I always use UTF-8 in project
}


jar {
    archiveBaseName = project.name
    archiveVersion = '' // removed as i do not use version
}

version = '3'
// ./gradlew dependencyCheckAnalyze

dependencies {
    implementation "commons-io:commons-io:2.11.0"
    implementation "ch.qos.logback:logback-classic:1.5.8"
    implementation "org.simplejavamail:simple-java-mail:5.5.1" //TODO update
    implementation "io.rest-assured:rest-assured:${restAssuredVersion}" //normally should be testCompile
    implementation "io.rest-assured:json-schema-validator:${restAssuredVersion}" //normally should be testCompile
    implementation "org.projectlombok:lombok:${lombokVersion}"
    implementation "org.apache.kafka:kafka-clients:3.4.0" //TODO remove kafka from java pr
    implementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
    implementation "org.json:json:20240303"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
    testImplementation 'org.junit.platform:junit-platform-launcher:1.8.2'
    testImplementation "org.hamcrest:hamcrest-all:1.3"
    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
    testImplementation "org.mockito:mockito-junit-jupiter:${mockitoVersion}"
    testImplementation "org.assertj:assertj-core:3.24.2"
    testImplementation "com.github.stefanbirkner:system-rules:1.19.0" //junit rules for system package
}

test {
    jvmArgs("-noverify", "-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage") // WARNING: A Java agent has been loaded dynamically
    useJUnitPlatform()
}
